FIX: mobile-wrapper spacing on user-dash landing

--- a/src/app/pages/user-dashboard/user-dashboard.page.scss
+++ b/src/app/pages/user-dashboard/user-dashboard.page.scss
@@ -8,7 +8,7 @@
   display: inherit;
 }
 
-div.assessment-boxes {
+div.mobile-wrapper {
   margin-top: 150px;
 }
 
